bug 205682 : URLs in html documents are saved (and sent back) in UTF-8. Get them saved/sent-back in the document charset (r=adamlock, sr=bz, a=chofmann)